--- a/src/index.css
+++ b/src/index.css
@@ -271,10 +271,8 @@ input {
     border: none;
     background-color: transparent;
   }
-  .usun img {
-    bottom: 2rem;
-    z-index: 1;
-    width: 1rem;
-    height: 1.2rem;
+
+  .usun svg {
+    stroke: var(--font-color);
   }
 }
