--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ html {
   --grey-color: var(--grey);
   --nowhite-color: var(--nowhite);
   --noblack-color: var(--noblack);
+  --operation-color: var(--white);
 }
 
 .night-theme {
@@ -31,6 +32,7 @@ html {
   --grey-color: var(--grey);
   --nowhite-color: #181818;
   --noblack-color: var(--noblack);
+  --operation-color: var(--white);
 }
 
 body {
@@ -215,7 +217,7 @@ input {
     background-color: var(--nowhite-color);
     border: 1px solid var(--samat);
     border-radius: 0.4rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     position: fixed;
     bottom: 1.5rem;
     left: 2rem;
@@ -251,9 +253,9 @@ input {
   .calculate {
     padding: 0.6rem 0.5rem;
     background-color: var(--samat);
-    color: var(--nowhite-color);
+    color: var(--operation-color);
     border-radius: 0.4rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-weight: 400;
     position: fixed;
     bottom: 1.5rem;
